# hn-jobs

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: deploy.yml
api/: schemas.py  views.py
deployment/: entrypoint.sh  supervisord.conf
frontend/webpack/: webpack.common.js  webpack.config.dev.js  webpack.config.prod.js
hackernews_developers/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
hn_jobs/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
jobs/: admin.py  constants.py  filters.py  models.py  queries.py  tasks.py  urls.py  utils.py  views.py
jobs/migrations/: 0001_initial.py  0002_remove_post_metadata.py  0003_posttitle_posttechnology_post_jobs_post_technologies.py  0004_alter_post_company_job_application_link.py  0005_email.py  0006_email_post_alter_email_company.py  0007_company_compliment.py  0008_email_email_is_generic.py  0009_email_is_approved.py  0010_post_submitted_datetime.py
pages/: forms.py  tasks.py  urls.py  views.py
profiles/: filters.py  models.py  tasks.py  urls.py  utils.py  views.py
profiles/migrations/: 0001_initial.py  0002_profile_years_of_experience.py  0003_alter_profile_years_of_experience.py  0004_alter_profile_years_of_experience.py  0005_profile_hn_username.py  0006_profile_city_profile_country_profile_state.py  0007_remove_profile_who_wants_to_be_hired_titles_and_more.py  (+2 more)
templates/: base.html
users/: forms.py  models.py  urls.py  views.py
utils/: models.py
(+20 files in other folders)
