[tool.poetry]
name = "hackernews_developers"
version = "0.1.0"
description = "List of HackerNews Developers"
authors = ["Rasul Kireev <me@rasulkireev.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
django-allauth = "^0.50.0"
python-webpack-boilerplate = "^1.0.0"
django-widget-tweaks = "^1.4.12"
django-environ = "^0.10.0"
psycopg2 = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
