[tool.poetry]
name = "hackernews_developers"
version = "0.1.0"
description = "List of HackerNews Developers"
authors = ["Rasul Kireev <me@rasulkireev.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
django-allauth = "^0.50.0"
python-webpack-boilerplate = "^1.0.0"
django-widget-tweaks = "^1.4.12"
django-environ = "^0.10.0"
psycopg2 = "^2.9.5"
django-model-utils = "^4.3.1"
django-q = "^1.3.9"
croniter = "^1.3.8"
httpx = "^0.23.3"
openai = "^0.27.2"
django-autoslug = "^1.9.8"
markdown = "^3.4.1"
gunicorn = "^20.1.0"
pillow = "^9.4.0"
django-extensions = "^3.2.1"
django-filter = "^22.1"
django-anymail = {extras = ["mailgun"], version = "^9.1"}
pygments = "^2.14.0"
dj-stripe = "^2.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
